--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -6,7 +6,6 @@
     min-height: 100px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 4px;
     align-self: flex-start;
     display: flex;
     flex-direction: column;
